--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contador de Números</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Contador de Números</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <div class="box">
-        <p style="font-size: 20px; margin-top: 1px; font-weight: bold;">Contador de números!</p>
-        <form action="">
-            <p>Digite o número que deseja:</p>
-            <input type="number" id="select_number">
+	<div class="box">
+		<p style="font-size: 20px; margin-top: 1px; font-weight: bold;">Contador de números!</p>
+		<form action="">
+			<p>Digite o número que deseja:</p>
+			<input type="number" id="select_number">
 
-            <p>Digite o número para início da contagem:</p>
-            <input type="number" id="number_initial">
+			<p>Digite o número para início da contagem:</p>
+			<input type="number" id="number_initial">
 
-            <p>Digite o número para fim da contagem:</p>
-            <input type="number" id="end_number">
+			<p>Digite o número para fim da contagem:</p>
+			<input type="number" id="end_number">
 
-            <button id="btn_cont" type="button">Contar</button>
+			<button id="btn_cont" type="button">Contar</button>
 
-            <p>Quantidade de números contados:</p>
-            <input type="text" id="total" style="width: 200px">
+			<p>Resultado:</p>
+			<input type="text" id="total" style="width: 200px">
 
-            <button id="clean" type="reset">Limpar</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
+			<button id="clean" type="reset">Limpar</button>
+		</form>
+	</div>
+	<script src="script.js"></script>
 </body>
 
 </html>
